@@ -1,3 +1,4 @@
+	* update use of boost.system to not use deprecated functions
 	* fix GIL issue in python bindings. Deprecated extension support in python
 	* fixed bug where setting upload slots to -1 would not mean infinite
 	* extend the UDP tracker protocol to include the request string from the tracker URL
